Router and controller for name resource

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PW_Initial=123456
-DB_PW=<Your Password>
+DB_PW=<your password>
 DB_DB=db21502
 JSON_FILE=data.json
